[Fix] 阻擋長按後的click事件一次，防止長按後馬上觸發click [Fix] 新增與確認按鈕的container，GAP不可是百分比，必須是固定px，不然按下按鈕會造成物件位移(MudBlazor的按鈕問題) [Add] 阻擋雙擊放大畫面

--- a/demoVer/Components/Shared/EditCard.razor.css
+++ b/demoVer/Components/Shared/EditCard.razor.css
@@ -136,7 +136,7 @@ table.table input {
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    gap: 10%;
+    gap: 24px; 
 }
 
 .avatar-button {
